--- a/Mongoose/package.json
+++ b/Mongoose/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon src/server.ts",
     "build": "rimraf dist && tsc",
     "start": "node dist/server.js",
-     "lint": "eslint \"src/**/*.ts\" --no-ignore"
+    "lint": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,8 @@
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
     "rimraf": "^6.0.1",
