--- a/Mongoose/package.json
+++ b/Mongoose/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon src/server.ts",
     "build": "rimraf dist && tsc",
     "start": "node dist/server.js",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "pretty": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\""
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,6 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/cors": "^2.8.17",
-    "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.9.0",
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^8.14.0",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
+    "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0"
