--- a/Mongoose/package.json
+++ b/Mongoose/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon src/server.ts",
     "build": "rimraf dist && tsc",
-    "start": "node dist/server.js",
+    "start": "nodemon dist/server.js",
     "lint": "eslint . --fix",
     "pretty": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\""
   },
@@ -28,9 +28,12 @@
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0"
   }
