--- a/Mongoose/package.json
+++ b/Mongoose/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.8.1",
+    "node": "^18.20.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
