--- a/Mongoose/package.json
+++ b/Mongoose/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
-    "node": "^18.20.5"
+    "node": "^18.20.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
